syntax = "proto3";

package notification;

// Notification Service Definition
service NotificationService {
  // Send single notification
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);

  // Send batch notifications
  rpc SendBatchNotifications(SendBatchNotificationsRequest) returns (SendBatchNotificationsResponse);

  // Get notification status
  rpc GetNotificationStatus(GetNotificationStatusRequest) returns (GetNotificationStatusResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Common types
enum NotificationType {
  EMAIL = 0;
  SMS = 1;
  PUSH = 2;
  WEBHOOK = 3;
}

enum NotificationStatus {
  PENDING = 0;
  SENT = 1;
  DELIVERED = 2;
  FAILED = 3;
  RETRY = 4;
}

enum NotificationPriority {
  LOW = 0;
  NORMAL = 1;
  HIGH = 2;
  URGENT = 3;
}

// Send single notification
message SendNotificationRequest {
  string event_id = 1;           // Unique event identifier
  string user_id = 2;            // Recipient user ID
  NotificationType type = 3;     // Notification type
  string template_id = 4;        // Template identifier
  map<string, string> payload = 5; // Template variables
  NotificationPriority priority = 6;
  int32 retry_count = 7;         // Max retry attempts
  int32 timeout_ms = 8;          // Timeout in milliseconds
  map<string, string> metadata = 9; // Auth/tracking metadata
}

message SendNotificationResponse {
  bool success = 1;
  string notification_id = 2;
  string message = 3;
  NotificationStatus status = 4;
  int64 timestamp = 5;
}

// Batch notifications
message SendBatchNotificationsRequest {
  string batch_id = 1;
  repeated SendNotificationRequest notifications = 2;
  map<string, string> metadata = 3;
}

message SendBatchNotificationsResponse {
  bool success = 1;
  string batch_id = 2;
  int32 total_count = 3;
  int32 success_count = 4;
  int32 failed_count = 5;
  repeated SendNotificationResponse results = 6;
}

// Get notification status
message GetNotificationStatusRequest {
  string notification_id = 1;
  map<string, string> metadata = 2;
}

message GetNotificationStatusResponse {
  bool success = 1;
  string notification_id = 2;
  NotificationStatus status = 3;
  string message = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  int32 retry_count = 7;
}

// Health check
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  bool healthy = 1;
  string version = 2;
  int64 timestamp = 3;
}

